.storybook/storybook.css
/* GENERAL */
html {
  color: #071a32;
  font-family: "Helvetica Neue", Arial, sans-serif;
  line-height: 1.5;
}

html,
body {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-size: 16px;
}

body {
  padding: 2rem;
}

* {
  box-sizing: border-box;
}

/* BUTTON */
.button {
  padding: 0.5rem 0.75rem;
  font-size: 1rem;
  font-family: "Helvetica Neue", Arial, sans-serif;
  border-radius: 0.5rem;
  background: deeppink;
  color: #fff;
  cursor: pointer;
  position: relative;
  max-width: 18rem;
  word-break: break-word;
  word-wrap: break-word;
  transition: all 0.5s;
}

.button:focus,
.button:hover {
  outline: none;
}

.button.outline:focus::before,
.button.outline:hover::before {
  box-shadow: deeppink 0 0 0 0.0625rem;
  content: "";
  height: calc(100% + 0.25rem);
  left: 0;
  margin-left: -0.25rem;
  margin-top: -0.25rem;
  pointer-events: none;
  position: absolute;
  top: 0;
  width: calc(100% + 0.25rem);
  border-radius: inherit;
  padding: 0.125rem;
}

.button.underline {
  border: none;
  border-radius: 0;
  background: transparent;
  color: deeppink;
  padding: 0;
  margin: 0.25rem 0.5rem;
  font-weight: bold;
}

.button.underline:focus::before,
.button.underline:hover::before {
  border-bottom: 0.0625rem solid currentcolor;
  bottom: -0.1875rem;
  content: "";
  height: 0;
  left: 0;
  position: absolute;
  right: 0;
  pointer-events: none;
}

/* TEXT INPUT */
.ti {
  padding: 0.5rem 0.75rem;
  font-size: 1rem;
  font-family: "Helvetica Neue", Arial, sans-serif;
  border: 0.0625rem solid #071a32;
  border-radius: 0.25rem;
  background: #fff;
  color: #071a32;
  position: relative;
}

.ti:focus,
.ti:hover {
  outline: none;
  border-bottom: 0.25rem solid #071a32;
  padding: 0.5rem 0.75rem 0.3125rem 0.75rem;
}

